# server/swagger_output.json
@@ -2,13 +2,13 @@
   "swagger": "2.0",
   "info": {
     "version": "1.1.0",
-    "title": "E-vehicle  APIs",
-    "description": "API for E-vehicle by <b>Bruce</b> using NodeJS."
+    "title": "Equipment Distribution APIs",
+    "description": "API for Equipment Distibution System built by <b>Bruce</b> using NodeJS and Mysql."
   },
-  "host": "http://localhost:4500",
+  "host": "localhost:5000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "securityDefinitions": {
     "Authorization": {
@@ -78,129 +78,6 @@
         }
       }
     },
-    "/auth/verify": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/VerifyEmailModel"
-            }
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/auth/changePassword": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/ChangePasswordModel"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      }
-    },
-    "/auth/profile/{id}": {
-      "get": {
-        "tags": [
-          "Profile"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name":"id",
-            "in":"path",
-            "type":"string",
-            "required":true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      },
-      "patch": {
-        "tags": [
-          "Profile"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name":"id",
-            "in":"path",
-            "type":"string",
-            "required":true
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/UpdateUserModel"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "422": {
-            "description": "Unprocessable Entity"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      }
-    },
     "/auth/users": {
       "get": {
         "tags": [
@@ -260,10 +137,10 @@
         ]
       }
     },
-    "/blogs": {
+    "/laptops": {
       "get": {
         "tags": [
-          "Blogs"
+          "Employees-laptops"
         ],
         "description": "",
         "responses": {
@@ -273,43 +150,29 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "Authorization": []
+          }
+        ]
       },
       "post": {
         "tags": [
-          "Blogs"
+          "Employees-laptops"
         ],
-        "description": "",
+        "description": "",         
+        "parameters":[{
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/LaptopModel"
+            }
+        }],        
         "consumes": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "image",
-            "in": "formData",
-            "required": true,
-            "type": "file"
-          },
-          {
-            "name": "category",
-            "in": "formData",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "title",
-            "in": "formData",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "content",
-            "in": "formData",
-            "required": true,
-            "type": "string"
-          }
-
-        ],      
+          "application/json"               
+        ],  
         "responses": {
           "200": {
             "description": "Created"
@@ -332,28 +195,20 @@
       }
     },
 
-    "/blogs/{id}": {
+    "/laptops/{id}": {
       "patch": {
         "tags": [
-          "Blogs"
+          "Employees-laptops"
         ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/BlogModel"
-            }
+        "description": "",        
+        "parameters":[{
+          "name": "obj",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "$ref": "#/definitions/LaptopModel"
           }
-        ],
+      }], 
         "responses": {
           "201": {
             "description": "Updated"
@@ -376,7 +231,7 @@
       },
       "get": {
         "tags": [
-          "Blogs"
+          "Employees-laptops"
         ],
         "description": "",
         "parameters": [
@@ -397,11 +252,16 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "Authorization": []
+          }
+        ]
       },
       "delete": {
         "tags": [
-          "Blogs"
+          "Employees-laptops"
         ],
         "description": "",
         "parameters": [
@@ -429,167 +289,15 @@
           }
         ]
       }
-    },
-    "/contact/message": {
-      "get": {
-        "tags": [
-          "Admin"
-        ],
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "Retrieved"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      },
-      "post": {
-        "tags": [
-          "Contacts"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/ContactModel"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Query ok"
-          },
-          "422": {
-            "description": "Unprocessable Entity"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/blogs/{id}/comments": {
-      "get": {
-        "tags": [
-          "Blogs"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      },
-      "patch": {
-        "tags": [
-          "Blogs"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/CommentModel"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      }
-    },
-    "/blogs/{id}/likes":{
-      "patch":{
-        "tags":[
-          "Blogs"
-        ],
-        "parameters":[
-          {
-            "name":"id",
-            "in":"path",
-            "type":"string",
-            "required":true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Liked"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "Authorization": []
-          }
-        ]
-      }
-    }
+    }    
   },
   "definitions": {
     "LoginModel": {
       "type": "object",
       "properties": {
-        "email": {
+        "username": {
           "type": "string",
-          "example": "rice@gmail.com"
+          "example": "rice"
         },
         "password": {
           "type": "string",
@@ -597,137 +305,79 @@
         }
       },
       "required": [
-        "email",
+        "username",
         "password"
       ]
     },
     "RegisterModel": {
       "type": "object",
       "properties": {
-        "first_name": {
+        "names": {
           "type": "string",
           "example": "John"
         },
-        "last_name": {
+        "username": {
           "type": "string",
           "example": "Snow"
         },
-        "email": {
-          "type": "string",
-          "example": "nezabruce@gmail.com"
-        },
         "password": {
           "type": "string",
-          "example": "Password123#"
+          "example": "nezabruce@gmail.com"
         }
       },
       "required": [
-        "name",
-        "email",
+        "names",
+        "username",
         "password"
       ]
     },
-    "UpdateUserModel": {
+    "LaptopModel": {
       "type": "object",
       "properties": {
-        "first_name": {
+        "firstname": {
           "type": "string",
-          "example": "John Snow"
+          "example": "jonas"
         },
-        "last_name": {
+        "lastname": {
           "type": "string",
-          "example": "John Snow"
-        },        
-        "email": {
-          "type": "string",
-          "example": "john@gmail.com"
-        }        
-      },
-      "required": [
-        "first_name",
-        "last_name",
-        "email"
-      ]
-    },
-    "ContactModel": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "example": "jonas blue"
+          "example": "blue"
         },
-        "email": {
+        "national_identity": {
           "type": "string",
-          "example": "john@gmail.com"
+          "example": "12000710913307"        
         },
-        "message": {
-          "type": "string",
-          "example": "Hi bruce"
-        }
-      },
-      "required": [
-        "email",
-        "password"
-      ]
-    },
-    "CommentModel":{
-      "type":"object",
-      "properties":{
-       "comment":{
-         "type":"string",
-         "example":"nice one"
-       } 
-      }
-    },
-    "BlogModel": {
-      "type": "object",
-      "properties": {
-        "category": {
-          "type": "string",
-          "example": "6064e654b5c7475bac63ad22"
-        },
-        "title": {
-          "type": "string",
-          "example": "Elon Musk Admits He Wants to Travel to Mars Because No One Hates Him There Yet"
-        },
-        "content": {
-          "type": "string",
-          "example": "AUSTIN, Texas — Wiping tears from his eyes at a recent press conference, SpaceX CEO Elon Musk revealed that the reason he’s so keen on traveling to Mars is not for the potential benefits to science, but because it’s the one place he can think of where no one hates him yet."
-        }
-      },
-      "required": [
-        "category",
-        "title",
-        "body"
-      ]
-    },
-    "VerifyEmailModel": {
-      "type": "object",
-      "properties": {
-        "code": {
+        "telephone": {
           "type": "number",
-          "example": 333333
-        }
-      },
-      "required": [
-        "code"
-      ]
-    },
-    "ChangePasswordModel": {
-      "type": "object",
-      "properties": {
-        "oldPassword": {
-          "type": "string",
-          "example": "Password123"
+          "example": "0788888888"
         },
-        "newPassword": {
+        "email": {
           "type": "string",
-          "example": "Password789"
+          "example": "john@gmail.com"
+        },
+        "department": {
+          "type": "string",
+          "example": "Human Resource"
+        },
+        "position": {
+          "type": "string",
+          "example": "Manager"
+        },
+        "laptop_manufacturer": {
+          "type": "string",
+          "example": "HP"
+        },
+        "model": {
+          "type": "string",
+          "example": "envy"
+        },
+        "serial_number": {
+          "type": "number",
+          "example": "3400"
         }
       },
       "required": [
-        "oldPassword",
-        "newPassword"
+        "email",
+        "password"
       ]
     }
   }
